<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:padding="30dip" android:orientation="vertical"
    android:background="@drawable/vocabappbackground"
    android:scrollbars="vertical">
   
  <Button android:id="@+id/word_list_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/word_list_label" /> 
  <Button android:id="@+id/word_roots_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/word_roots_label" />
  <Button android:id="@+id/study_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/study_label" /> 
  <Button android:id="@+id/edit_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="Edit Lists" /> 
  <Button android:id="@+id/about_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/about_label" /> 
  <Button android:id="@+id/exit_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/exit_label" />
</LinearLayout>
